I adjusted the size of the images a little bit, I added the images I needed to add in the html, and I made them all clickable. I also added where it will click back and forth, not just one time.

--- a/pics.html
+++ b/pics.html
@@ -16,13 +16,13 @@
 </table></center>
     <center><table>
         <tr><td><img id="img4" src="http://ih.constantcontact.com/fs015/1101828445774/img/383.jpg?a=1111353578837"></td>
-            <td><img id="img5" src=""></td>
-            <td><img id="img6" src=""></td></tr>
+            <td><img id="img5" src="http://alba.sportabili.org/files/u1/IMG_1667__Large__0.jpg"></td>
+            <td><img id="img6" src="http://www.fidal.it/upload/old_images/OMG307.jpg"></td></tr>
     </table></center>
         <center><table>
-            <tr><td><img id="img7" src=""></td>
-                <td><img id="img8" src=""></td>
-                <td><img id="img9" src=""></td></tr>
+            <tr><td><img id="img7" src="http://resources3.news.com.au/images/2012/07/29/1226437/800543-natalia-partyka.jpg"></td>
+                <td><img id="img8" src="http://megamocni.pl/img/content/userfiles/61/images/neroli_fairhall.jpg"></td>
+                <td><img id="img9" src="http://www.chinadaily.com.cn/paralympics/images/attachement/jpg/site1/20080915/000d60aa06df0a38080717.jpg"></td></tr>
         </table></center>
 
 
